[project]
name = "hyperlab-control"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fabric (>=3.2.2,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "wol (>=0.2,<0.3)"
]

[tool.poetry]
packages = [{include = "hyperlab_control", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
